// Vitest Snapshot v1

exports[`Redis > Props > All the props 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "app": "my-app",
        "environment": "test",
        "instance": "test",
        "region": "local",
        "release": "v1",
        "role": "redis",
      },
      "name": "test-redis-test-c8b56c58",
      "namespace": "test",
    },
    "spec": {
      "clusterIP": "None",
      "ports": [
        {
          "port": 6379,
          "protocol": "TCP",
        },
      ],
      "selector": {
        "app": "my-app",
        "instance": "test",
        "role": "redis",
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": {
      "labels": {
        "app": "my-app",
        "environment": "test",
        "instance": "test",
        "region": "local",
        "release": "v1",
        "role": "redis",
      },
      "name": "test-redis-test-redis-test-sts-c82d6e34",
      "namespace": "test",
    },
    "spec": {
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "app": "my-app",
          "instance": "test",
          "role": "redis",
        },
      },
      "serviceName": "test-redis-test-c8b56c58",
      "template": {
        "metadata": {
          "labels": {
            "app": "my-app",
            "environment": "test",
            "instance": "test",
            "region": "local",
            "release": "v1",
            "role": "redis",
          },
        },
        "spec": {
          "containers": [
            {
              "command": [
                "redis-server",
                "--appendonly",
                "yes",
              ],
              "env": [
                {
                  "name": "MASTER",
                  "value": "true",
                },
              ],
              "image": "redis:v1",
              "livenessProbe": {
                "failureThreshold": 5,
                "initialDelaySeconds": 5,
                "tcpSocket": {
                  "port": 6379,
                },
                "timeoutSeconds": 5,
              },
              "name": "redis",
              "ports": [
                {
                  "containerPort": 6379,
                },
              ],
              "readinessProbe": {
                "exec": {
                  "command": [
                    "redis-cli",
                    "ping",
                  ],
                },
                "failureThreshold": 5,
                "initialDelaySeconds": 5,
                "timeoutSeconds": 5,
              },
              "resources": {
                "limits": {
                  "cpu": "100m",
                  "memory": "250Mi",
                },
              },
              "volumeMounts": [
                {
                  "mountPath": "/redis-master-data",
                  "name": "data",
                },
              ],
            },
          ],
          "priorityClassName": "test",
          "volumes": [
            {
              "emptyDir": {},
              "name": "data",
            },
          ],
        },
      },
    },
  },
]
`;

exports[`Redis > Props > Minimal required props 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "instance": "redis-test",
        "release": "v1",
        "role": "redis",
      },
      "name": "test-redis-test-c8b56c58",
    },
    "spec": {
      "clusterIP": "None",
      "ports": [
        {
          "port": 6379,
          "protocol": "TCP",
        },
      ],
      "selector": {
        "instance": "redis-test",
        "role": "redis",
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": {
      "labels": {
        "instance": "redis-test",
        "release": "v1",
        "role": "redis",
      },
      "name": "test-redis-test-redis-test-sts-c82d6e34",
    },
    "spec": {
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "instance": "redis-test",
          "role": "redis",
        },
      },
      "serviceName": "test-redis-test-c8b56c58",
      "template": {
        "metadata": {
          "labels": {
            "instance": "redis-test",
            "release": "v1",
            "role": "redis",
          },
        },
        "spec": {
          "containers": [
            {
              "command": [
                "redis-server",
                "--appendonly",
                "yes",
              ],
              "env": [
                {
                  "name": "MASTER",
                  "value": "true",
                },
              ],
              "image": "redis:v1",
              "livenessProbe": {
                "failureThreshold": 5,
                "initialDelaySeconds": 5,
                "tcpSocket": {
                  "port": 6379,
                },
                "timeoutSeconds": 5,
              },
              "name": "redis",
              "ports": [
                {
                  "containerPort": 6379,
                },
              ],
              "readinessProbe": {
                "exec": {
                  "command": [
                    "redis-cli",
                    "ping",
                  ],
                },
                "failureThreshold": 5,
                "initialDelaySeconds": 5,
                "timeoutSeconds": 5,
              },
              "resources": {
                "limits": {
                  "cpu": "100m",
                  "memory": "250Mi",
                },
              },
              "volumeMounts": [
                {
                  "mountPath": "/redis-master-data",
                  "name": "data",
                },
              ],
            },
          ],
          "priorityClassName": "database",
          "volumes": [
            {
              "emptyDir": {},
              "name": "data",
            },
          ],
        },
      },
    },
  },
]
`;
